refactor to dry out head inclusion of seo per page

--- a/app/_assets/styles/app.css
+++ b/app/_assets/styles/app.css
@@ -161,7 +161,7 @@ a:active {
 }
 
 a:focus,
-.btn:focus,
+button:focus,
 input:focus,
 textarea:focus {
     outline: 5px auto Highlight !important;
