--- a/app/assets/styles/app.css
+++ b/app/assets/styles/app.css
@@ -183,6 +183,10 @@ abbr {
 
 .site__main {
     flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /* ---------------------------------------------------------------------
